test/good/classes/struct05.px

class A def
    Char x: 'A'

A a
a = A()
print a.x

A a = A()
a.x = '#'
print a.x
