test/bad/classes/abstract03.px

class A def
    constructor() abstract

A()
